<resources>
    <string name="app_name">Bagzag</string>
    <string name="hint_email_address">Email Address</string>
    <string name="label_dummy">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam nulla eros, ultricies sit amet, nonummy id, imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit risus. Phasellus nec sem in justo pellentesque facilisis. Etiam imperdiet imperdiet orci. Nunc nec neque. Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi. Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod orci, ac Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam nulla eros, ultricies sit amet, nonummy id, imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit risus. Phasellus nec sem in justo pellentesque facilisis. Etiam imperdiet imperdiet orci. Nunc nec neque. Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi. Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod orci, ac  </string>
    <string name="connection_exception">No Internet connection. Please check your Internet connection and try again.</string>
    <string name="socket_time_out_exception">Connection timeout</string>
    <string name="other_exception">Something is wrong here</string>
    <string name="validation_enter_email">Please enter email</string>
    <string name="validation_enter_first_name">Please enter first name</string>
    <string name="validation_enter_last_name">Please enter last name</string>
    <string name="validation_enter_mobile_number">Please enter mobile number</string>
    <string name="validation_valid_email">Please enter valid email address</string>
    <string name="validation_valid_first_name">Please enter valid first name</string>
    <string name="validation_valid_last_name">Please enter valid last name</string>
    <string name="validation_valid_mobile_number">Please enter valid mobile number</string>
    <string name="validation_enter_password">Please enter password</string>
    <string name="validation_enter_confirm_password">Please enter confirm password</string>
    <string name="validation_password_mismatch">Password mismatch</string>
    <string name="validation_agree_terms">Please select checkbox</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="label_please_accept_condition">Please accept condition</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="continue_as_guest"><u>Continue as a guest</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="trendy_collection">Trendy Collection</string>
    <string name="let_s_create_your_own">Let\'s create\nyour own</string>
    <string name="style">style</string>
    <string name="_100_secure">100% secure\n</string>
    <string name="payment">payment</string>
    <string name="track_order">Track Order</string>
    <string name="experience_the_realtime">Experience the\nrealtime</string>
    <string name="tracking">tracking</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="email_phone_number">Email/Phone Number</string>
    <string name="password">Password</string>
    <string name="sign_in_to">Sign In to</string>
    <string name="bagzag">BagZag</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_description">Enter your email address or mobile number we\'ll send you a link to reset password.</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="check_your_email">Check your email</string>
    <string name="dialog_description">We have sent instructions on how to reset the password.</string>
    <string name="ok">Ok</string>
    <string name="get_opt">Get OTP</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_1">+1</string>
    <string name="choose_your_country_code">Choose your country code</string>
    <string name="search">Search</string>
    <string name="canada">Canada</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="phone_verification_description">Please enter the verification code, we sent to your Mobile Number</string>
    <string name="mobile_number_formated">+33-808-621-8522</string>
    <string name="verify">Verify</string>
    <string name="resend_code">Resend Code</string>
    <string name="hi_">Hi,</string>
    <string name="david">David</string>
    <string name="hi_david">Hi, David</string>
    <string name="new_collection_from_bagzag">New Collection from BagZag.</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="view_more"><![CDATA[View More >]]></string>
    <string name="men">Men</string>
    <string name="bestseller_product">Bestseller Product</string>
    <string name="_30_off">30% Off</string>
    <string name="loose_textured_t_shirt">Loose Textured T-Shirt</string>
    <string name="_4_5">4.5</string>
    <string name="_256">| 256</string>
    <string name="_119_99">$119.99</string>
    <string name="_159_99">$159.99</string>
    <string name="free_shipping">Free Shipping</string>
    <string name="bestseller">Bestseller</string>
    <string name="recently_viewed_by_you">Recently viewed By You</string>
    <string name="buyer_s_most_loved">Buyer\'s Most Loved</string>
    <string name="find_things_you_ll_love">Find Things You\'ll Love</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_password_below">Enter your Password below.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="terms_policy"><![CDATA[I agree to Terms & Condition and Privacy Policy.]]></string>
    <string name="i_agree_to">I agree to</string>
    <string name="terms_condition">Terms &amp; Condition</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="test">test</string>
    <string name="favorites">Favorites</string>
    <string name="the_new_store">The New Store</string>
    <string name="_3038_godfrey_street_tigard_or_97223">3038 Godfrey Street Tigard, OR 97223</string>
    <string name="browse_categories">Browse Categories</string>
    <string name="hello">Hello</string>
    <string name="top_wear">Top Wear</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="recent_products">Recent Products</string>
    <string name="rating">Rating</string>
    <string name="price">Price</string>
    <string name="offer">Offer</string>
    <string name="offers">Offers</string>
    <string name="newest_oldest">Newest to Oldest</string>
    <string name="oldest_newest">Oldest to Newest</string>
    <string name="high_low">High to Low</string>
</resources>