<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        style="@style/AppTheme.BaseGuidLine.Horizontal"
        app:layout_constraintGuide_percent="0.02"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        style="@style/AppTheme.BaseGuidLine.Vertical"
        app:layout_constraintGuide_percent="0.05"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        style="@style/AppTheme.BaseGuidLine.Vertical"
        app:layout_constraintGuide_percent="0.95"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back"
        android:layout_width="@dimen/_17sdp"
        android:layout_height="@dimen/_17sdp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="@id/heading"
        app:layout_constraintBottom_toBottomOf="@id/heading"
        android:src="@drawable/ic_arrow_left"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/heading"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        android:text="@string/reset_password"
        style="@style/AppTheme.BaseTextView.20BlackMedium"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subHeading"
        style="@style/AppTheme.BaseTextView.14GreyRegular"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/heading"
        android:text="@string/enter_your_password_below"
    />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordInput"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/subHeading"
        style="@style/AppTheme.BaseEditText.Grey"
        android:layout_marginTop="@dimen/_20sdp"
        android:hint="@string/new_password"
        android:drawableEnd="@drawable/ic_hide"
        android:inputType="textPassword"
        />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/confirmPasswordInput"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        style="@style/AppTheme.BaseEditText.Grey"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/confirm_password"
        android:drawableEnd="@drawable/ic_hide"
        android:inputType="textPassword"
    />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updateButton"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordInput"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        style="@style/AppTheme.BaseButton.BlackButton"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/update"
    />

</androidx.constraintlayout.widget.ConstraintLayout>