<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_150sdp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_10sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/productImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:background="@drawable/drawable_round_background_empty"
        android:clipToOutline="true"
        android:src="@drawable/ic_shirt"
    />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/discount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/wishlist"
        app:layout_constraintBottom_toBottomOf="@id/wishlist"
        android:background="@drawable/drawable_pink_background_discount"
        android:text="@string/_30_off"
        style="@style/AppTheme.BaseTextView.8WhiteMedium"
        android:padding="@dimen/_3sdp"
    />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/wishlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/AppTheme.BaseImageView.Image24X24"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:src="@drawable/ic_unliked"
    />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/productImage"
        style="@style/AppTheme.BaseTextView.12BlackLight"
        android:text="@string/loose_textured_t_shirt"
        android:layout_marginTop="@dimen/_5sdp"
    />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ratingIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productName"
        style="@style/AppTheme.BaseImageView.Image14X14"
        android:src="@drawable/ic_star"
        android:layout_marginTop="@dimen/_5sdp"
    />
    
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/rating"
        style="@style/AppTheme.BaseTextView.10BlackMedium"
        app:layout_constraintStart_toEndOf="@id/ratingIcon"
        app:layout_constraintTop_toTopOf="@id/ratingIcon"
        app:layout_constraintBottom_toBottomOf="@id/ratingIcon"
        android:text="@string/_4_5"
    />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ratingCount"
        style="@style/AppTheme.BaseTextView.10GreyMedium"
        app:layout_constraintStart_toEndOf="@id/rating"
        app:layout_constraintTop_toTopOf="@id/ratingIcon"
        app:layout_constraintBottom_toBottomOf="@id/ratingIcon"
        android:text="@string/_256"
        android:layout_marginStart="@dimen/_5sdp"
    />

    <FrameLayout
        android:id="@+id/labelContainer"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingIcon"
    />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/finalPrice"
        style="@style/AppTheme.BaseTextView.12BlackRegular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/_119_99"
    />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/price"
        style="@style/AppTheme.BaseTextView.12GreyRegular"
        app:layout_constraintStart_toEndOf="@id/finalPrice"
        app:layout_constraintTop_toTopOf="@id/finalPrice"
        app:layout_constraintEnd_toStartOf="@id/addToCart"
        app:layout_constraintBottom_toBottomOf="@id/finalPrice"
        android:text="@string/_159_99"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintHorizontal_bias="0"
    />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/addToCart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/finalPrice"
        app:layout_constraintBottom_toBottomOf="@id/finalPrice"
        style="@style/AppTheme.BaseImageView.Image22X22"
        android:src="@drawable/ic_cart_big"
    />

</androidx.constraintlayout.widget.ConstraintLayout>