<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/_110sdp"
    android:layout_marginStart="@dimen/_10sdp"
    android:background="@drawable/drawable_round_background_grey">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/productImage"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:src="@drawable/ic_shirt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/productName"
        style="@style/AppTheme.BaseTextView.14BlackMedium"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/loose_textured_t_shirt"
        app:layout_constraintBottom_toTopOf="@id/ratingIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/productImage"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ratingIcon"
        style="@style/AppTheme.BaseImageView.Image14X14"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toTopOf="@id/labelContainer"
        app:layout_constraintStart_toStartOf="@id/productName"
        app:layout_constraintTop_toBottomOf="@id/productName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/rating"
        style="@style/AppTheme.BaseTextView.10BlackMedium"
        android:text="@string/_4_5"
        app:layout_constraintBottom_toBottomOf="@id/ratingIcon"
        app:layout_constraintStart_toEndOf="@id/ratingIcon"
        app:layout_constraintTop_toTopOf="@id/ratingIcon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ratingCount"
        style="@style/AppTheme.BaseTextView.10GreyMedium"
        android:layout_marginStart="@dimen/_5sdp"
        android:text="@string/_256"
        app:layout_constraintBottom_toBottomOf="@id/ratingIcon"
        app:layout_constraintStart_toEndOf="@id/rating"
        app:layout_constraintTop_toTopOf="@id/ratingIcon" />

    <FrameLayout
        android:id="@+id/labelContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/finalPrice"
        app:layout_constraintStart_toStartOf="@id/productName"
        app:layout_constraintTop_toBottomOf="@id/ratingIcon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/finalPrice"
        style="@style/AppTheme.BaseTextView.12BlackRegular"
        android:text="@string/_119_99"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/productName"
        app:layout_constraintTop_toBottomOf="@id/labelContainer" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/price"
        style="@style/AppTheme.BaseTextView.12GreyRegular"
        android:layout_marginStart="@dimen/_5sdp"
        android:text="@string/_159_99"
        app:layout_constraintBottom_toBottomOf="@id/finalPrice"
        app:layout_constraintEnd_toStartOf="@id/addToCart"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/finalPrice"
        app:layout_constraintTop_toTopOf="@id/finalPrice" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/addToCart"
        style="@style/AppTheme.BaseImageView.Image22X22"
        android:layout_marginEnd="@dimen/_10sdp"
        android:src="@drawable/ic_cart_big"
        app:layout_constraintBottom_toBottomOf="@id/finalPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/finalPrice" />

</androidx.constraintlayout.widget.ConstraintLayout>