<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_bottom_sheet_background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            style="@style/AppTheme.BaseGuidLine.Vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            style="@style/AppTheme.BaseGuidLine.Vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_55sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toTopOf="@id/welcomeMessage"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcomeMessage"
            style="@style/AppTheme.BaseTextView.16BlackMedium"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/welcome_back"
            app:layout_constraintBottom_toTopOf="@id/signHeading"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signHeading"
            style="@style/AppTheme.BaseTextView.24BlackLight"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/sign_in_to"
            app:layout_constraintBottom_toTopOf="@id/facebook"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/facebook"
            style="@style/AppTheme.BaseImageView"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_26sdp"
            android:src="@drawable/ic_facebook"
            app:layout_constraintBottom_toTopOf="@id/orImage"
            app:layout_constraintEnd_toStartOf="@id/google"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/guidelineStart" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/google"
            style="@style/AppTheme.BaseImageView"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:src="@drawable/ic_google"
            app:layout_constraintBottom_toBottomOf="@id/facebook"
            app:layout_constraintEnd_toStartOf="@id/apple"
            app:layout_constraintStart_toEndOf="@id/facebook"
            app:layout_constraintTop_toTopOf="@id/facebook" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/apple"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:src="@drawable/ic_apple"
            app:layout_constraintBottom_toBottomOf="@id/facebook"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/google"
            app:layout_constraintTop_toTopOf="@id/facebook" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/orImage"
            style="@style/AppTheme.BaseImageView"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:src="@drawable/ic_or"
            app:layout_constraintBottom_toTopOf="@id/emailInput"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailInput"
            style="@style/AppTheme.BaseEditText.Grey"
            android:layout_marginBottom="@dimen/_10sdp"
            android:hint="@string/email_phone_number"
            app:layout_constraintBottom_toTopOf="@id/passwordInput"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordInput"
            style="@style/AppTheme.BaseEditText.Grey"
            android:layout_marginBottom="@dimen/_20sdp"
            android:drawableEnd="@drawable/ic_hide"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@id/signInButton"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInButton"
            style="@style/AppTheme.BaseButton.BlackButton"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toTopOf="@id/forgotPassword"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgotPassword"
            style="@style/AppTheme.BaseTextView.18GreyMedium"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/forgot_password_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>





